# music-synthesizer-for-android

./: Dx7Envelope.md  Dx7Hardware.md  FrequencyModulation.md  GettingStarted.md  ProjectHome.md  SinePoly.md  YamahaDx7.md  build.gradle  build.xml
.اندیشه/: Winroid.name
android/: .classpath  .gitignore  .project  AndroidManifest.xml
android/.externalToolBuilders/: NDK Builder.launch  Proto Builder.launch
android/jni/: Android.mk  Application.mk
app/: build.gradle  proguard-rules.pro
app/src/main/jni/: CMakeLists.txt  Makefile  SynthApp.gyp  aligned_buf.h  android_glue.cc  audio.js  dx7note.h  emscripten.cc  env.cc  env.h  index.html  main.cc  pitchenv.cc  ringbuffer.cc  synth.css  synth_unit.cc  synthcore.js  synthcore.js.mem  ui.js
app/src/main/jni/SynthApp/: SynthAppDelegate.h  SynthAppDelegate.mm  SynthApp_Prefix.pch  SynthMain.mm  midi_in_mac.cc
app/src/main/jni/SynthApp.xcodeproj/: project.pbxproj
core/: .gitignore  build.xml
cpp/: README
cpp/src/: android_glue.cc  core.gyp  dx7note.cc  dx7note.h  env.cc  env.h  exp2.cc  exp2.h  fir.cc  fir.h  fm_core.cc  fm_core.h  fm_op_kernel.cc  freqlut.cc  lfo.cc  lfo.h  main.cc  main.gyp  module.h  neon_fir.s  neon_fm_kernel.s  neon_ladder.s  pitchenv.cc  pitchenv.h  resofilter.cc  resofilter.h  sin.cc  (+9 more)
j2se/: .classpath  .gitignore  .project  build.xml
lab/: Second order sections in matrix form.ipynb  Zero delay the easy way.ipynb  biquad in two.ipynb
test/: .gitignore  build.xml
wiki/: Dx7Envelope.wiki  Dx7Hardware.wiki  FrequencyModulation.wiki  GettingStarted.wiki  SinePoly.wiki  YamahaDx7.wiki
(+338 files in other folders)
